// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorAssetHeader->add folder else add folder into specific treeNode test snapshot 1`] = `
<article
  className="wonder-asset-assetTree"
>
  <ul
    className="wonder-tree-node"
  >
    <li>
      <div
        className="item-triangle"
        onMouseDown={[Function]}
      >
        <img
          src="./public/img/down.png"
        />
      </div>
      <img
        className="treeNode-icon"
        src="./public/img/package.png"
      />
      <div
        className="draggable-container"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        style={Object {}}
      >
        Assets
      </div>
    </li>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
          onMouseDown={[Function]}
        >
          <img
            src="./public/img/down.png"
          />
        </div>
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container select-active"
          draggable={true}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onMouseDown={[Function]}
          style={Object {}}
        >
          NoName Folder
        </div>
      </li>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container"
            draggable={true}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onMouseDown={[Function]}
            style={Object {}}
          >
            New Folder
          </div>
        </li>
      </ul>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetHeader->add folder if not select specific treeNode, add folder into root treeNode should add folder into root treeNode test snapshot 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="asset-header-item"
        onClick={[Function]}
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/add.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
        onClick={[Function]}
      >
        <div
          className="item-notBeClick"
        >
          <img
            src="./public/img/notRemove.png"
          />
        </div>
      </div>
      <div
        className="asset-header-item"
      >
        <div
          className="item-canBeClick"
        >
          <img
            src="./public/img/load.png"
          />
          <input
            className="asset-fileLoad"
            multiple={false}
            onChange={[Function]}
            type="file"
          />
        </div>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
            onMouseDown={[Function]}
          >
            <img
              src="./public/img/down.png"
            />
          </div>
          <img
            className="treeNode-icon"
            src="./public/img/package.png"
          />
          <div
            className="draggable-container select-not-active"
            draggable={true}
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onMouseDown={[Function]}
            style={Object {}}
          >
            Assets
          </div>
        </li>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onMouseDown={[Function]}
              style={Object {}}
            >
              NoName Folder
            </div>
          </li>
        </ul>
        <ul
          className="wonder-tree-node"
        >
          <li>
            <div
              className="item-triangle"
            />
            <img
              className="treeNode-icon"
              src="./public/img/package.png"
            />
            <div
              className="draggable-container"
              draggable={true}
              onDragEnd={[Function]}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onMouseDown={[Function]}
              style={Object {}}
            >
              New Folder
            </div>
          </li>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-folderBox"
      id="folder-2"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          NoName Folder
        </span>
      </div>
    </article>
    <article
      className="wonder-asset-folderBox"
      id="folder-3"
      style={
        Object {
          "border": "0px",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <div
        className="box-image"
      >
        <img
          src="./public/img/assetPackage.png"
        />
      </div>
      <div
        className="item-text "
      >
        <span>
          New Folder
        </span>
      </div>
    </article>
  </article>
</article>
`;

exports[`MainEditorAssetHeader->add folder test name remove first folder which use default name;
          add three folder;

          the first new one's name should be removed-folder's name;
             1`] = `
<article
  className="wonder-asset-assetTree"
>
  <ul
    className="wonder-tree-node"
  >
    <li>
      <div
        className="item-triangle"
        onMouseDown={[Function]}
      >
        <img
          src="./public/img/down.png"
        />
      </div>
      <img
        className="treeNode-icon"
        src="./public/img/package.png"
      />
      <div
        className="draggable-container select-not-active"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        style={Object {}}
      >
        Assets
      </div>
    </li>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
        />
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onMouseDown={[Function]}
          style={Object {}}
        >
          New Folder
        </div>
      </li>
    </ul>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
        />
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onMouseDown={[Function]}
          style={Object {}}
        >
          New Folder 1
        </div>
      </li>
    </ul>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
        />
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onMouseDown={[Function]}
          style={Object {}}
        >
          New Folder 2
        </div>
      </li>
    </ul>
  </ul>
</article>
`;

exports[`MainEditorAssetHeader->add folder test name test add the same name folder, the name should add postfix 1`] = `
<article
  className="wonder-asset-assetTree"
>
  <ul
    className="wonder-tree-node"
  >
    <li>
      <div
        className="item-triangle"
        onMouseDown={[Function]}
      >
        <img
          src="./public/img/down.png"
        />
      </div>
      <img
        className="treeNode-icon"
        src="./public/img/package.png"
      />
      <div
        className="draggable-container select-not-active"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
        onMouseDown={[Function]}
        style={Object {}}
      >
        Assets
      </div>
    </li>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
        />
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onMouseDown={[Function]}
          style={Object {}}
        >
          NoName Folder
        </div>
      </li>
    </ul>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
        />
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onMouseDown={[Function]}
          style={Object {}}
        >
          New Folder
        </div>
      </li>
    </ul>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
        />
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onMouseDown={[Function]}
          style={Object {}}
        >
          New Folder 1
        </div>
      </li>
    </ul>
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
        />
        <img
          className="treeNode-icon"
          src="./public/img/package.png"
        />
        <div
          className="draggable-container"
          draggable={true}
          onDragEnd={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          onMouseDown={[Function]}
          style={Object {}}
        >
          New Folder 2
        </div>
      </li>
    </ul>
  </ul>
</article>
`;
